--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="show">Show</string>
     <string name="gallery">갤러리에서 불러오기</string>
     <string name="videoPreview">위 영상으로\n분석하시겠습니까?</string>
+    <string name="loading">잠시만 기다려주세요</string>
+    <string name="explain">분석중입니다</string>
 </resources>
